--- a/adminpanel/css/style.css
+++ b/adminpanel/css/style.css
@@ -104,3 +104,18 @@ body {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
+
+.col-3 {
+    max-width: 25%;
+    flex: 25%;
+}
+
+.col-9 {
+    max-width: 75%;
+    flex: 75%;
+}
+
+.card-header{
+    font-size: 1.1em;
+    text-transform: uppercase;
+}
