--- a/adminpanel/css/style.css
+++ b/adminpanel/css/style.css
@@ -105,6 +105,7 @@ body {
   box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
 }
 
+/*
 .col-3 {
     max-width: 25%;
     flex: 25%;
@@ -114,8 +115,10 @@ body {
     max-width: 75%;
     flex: 75%;
 }
+*/
 
 .card-header{
     font-size: 1.1em;
     text-transform: uppercase;
+    background-color: 
 }
